<?xml version="1.0"?>
<package format="3">
    <name>avoid_wall</name>
    <version>0.0.1</version>
    <description>Wall avoider using lidar</description>
    <maintainer email="dorianayoul@outlook.fr">NairodGH</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
</package>